--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,19 +17,12 @@
   <!-- Fonts -->
   <link href='https://fonts.googleapis.com/css?family=Bitter:400,700,400italic|Open+Sans:400italic,600italic,400,600' rel='stylesheet' type='text/css'>
 
-  <!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
-  <script type="text/javascript">
-      window.cookieconsent_options = {"message":"I use cookies to make sure that I do not write stuff that no-one reads.","dismiss":"Thanks, EU!","learnMore":"More info","link":null,"theme":"dark-bottom"};
-  </script>
-
-  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.10/cookieconsent.min.js"></script>
-  <!-- End Cookie Consent plugin -->
 
 </head>
 <body>
   {{ content }}
     {% if jekyll.environment == 'production' %}
-    {% include analytics.html %}
+    {% include cookieconsent.html %}
     {% endif %}
 </body>
 </html>
