Remove cookie consent, start implementing adsense

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 <body>
   {{ content }}
     {% if jekyll.environment == 'production' %}
-    {% include cookieconsent.html %}
+    {% include adsense.html %}
     {% endif %}
 </body>
 </html>
