--- a/_includes/adsense.html
+++ b/_includes/adsense.html
@@ -1,4 +1,15 @@
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-85000211-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-85000211-1', { 'anonymize_ip': true });
+</script>
+
+
 <!-- Google AdSense -->
-<script data-ad-client="ca-pub-1833315759069474" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
-></script><!-- end of Google Adsense -->
+<script data-ad-client="ca-pub-1833315759069474" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
