--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -50,22 +50,9 @@ comments: true
 
 
     {% if page.comments and jekyll.environment == 'production' %}
-    <div id="disqus_thread"></div>
-    <script>
-        var disqus_config = function () {
-            //this.page.url = "{{ site.url }}"; 
-            this.page.identifier = "{{ page.title }}"; 
-        };
-        (function() { 
-            var d = document, s = d.createElement('script');
-            
-            s.src = '//terisikk.disqus.com/embed.js';
-            
-            s.setAttribute('data-timestamp', +new Date());
-            (d.head || d.body).appendChild(s);
-        })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+
+    {%include utterance.html %}
+
     {% endif %}
   </div>
 </article>
