Make bg image occluent

--- a/css/main.css
+++ b/css/main.css
@@ -119,6 +119,7 @@ header {
   /*-webkit-filter: grayscale(1);
   filter: grayscale(1);*/
   overflow: hidden;
+  opacity: 0.8;
 }
 
 @media (max-width: 960px) {
@@ -179,8 +180,7 @@ header .container {
 
 @media screen and (max-width: 960px){
   #home-header .container {
-    padding: 0px 50px 0px 50px;
-    margin-top: 250px;
+    padding: 100px 50px;
   }
 
   header .container {
