Don't crop images on posts sideways

--- a/_includes/captionimage.html
+++ b/_includes/captionimage.html
@@ -1,6 +1,6 @@
 <div class="image-wrapper" >
     <figure>
-        <img src="/images/{{ include.src }}" alt="{{ include.alt }}"/>
+        <img src="/images/{{ include.src }}" alt="{{ include.alt }}" class="caption"/>
     {% if include.caption %}
         <figcaption class="image-caption">{{ include.caption }}</figcaption>
     {% endif %}
