Add a post about Bruce Lee

--- a/css/main.css
+++ b/css/main.css
@@ -432,3 +432,9 @@ figcaption{
   font-size: 12px;
   font-style: italic;
 }
+
+sup {
+  line-height: 0;
+  vertical-align: super;
+  font-size: smaller;
+}
